# ai-superjack-foundry

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: secrets.toml
apps/api_gateway/: dependencies.py  main.py
apps/api_gateway/routers/: chat.py  documents.py  speech.py  traces.py
apps/mcp_server/: server.py
apps/streamlit_app/: app.py
apps/worker/: celery_app.py
docker/: api.Dockerfile  streamlit.Dockerfile
docs/adr/: 0001-repo-shape.md
docs/api/: endpoints.md
docs/architecture/: overview.md
scripts/: bootstrap.sh
services/evals/: grounding.py
services/llm_router/: base.py  factory.py  providers.py
services/memory/: cache.py
services/orchestration/: engine.py
services/retrieval/: service.py
services/speech/: service.py
shared/config/: settings.py
shared/contracts/: chat.py  documents.py  traces.py
shared/prompts/: system_prompt.txt
shared/utils/: cache_keys.py  chunking.py
tests/bdd/: test_grounded_chat.py
tests/fixtures/: grounded_chat.feature
tests/integration/: test_api.py
tests/unit/: test_cache_keys.py  test_chunking.py
